# docuprocess

./: .cursorrules  .env.example  .gitignore  CLAUDE.md  README.md
.claude/skills/: competitive-market-analysis  competitive-roadmap  competitor-site-analysis  supabase-postgres-best-practices
.github/workflows/: ci.yml  e2e-tests.yml  keep-alive.yml  sdk-publish.yml
.husky/: commit-msg  pre-commit
backend/: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  deploy.sh  dev.sh  pyproject.toml  pytest.ini  run_tests.sh  setup_cloud_tasks.sh  start_server.py  test_api.sh
backend/app/: __init__.py  cli.py  main.py  weasyprint_config.py
backend/app/core/: config.py  encryption.py  supabase.py
backend/app/dependencies/: __init__.py  auth.py  ratelimit.py
backend/app/models/: __init__.py  convert.py  team.py  template.py
backend/app/routers/v1/: __init__.py  account.py  convert.py
backend/app/security/: url_fetcher.py
backend/app/services/: __init__.py  credit_service.py  pdf_converter_service.py  ratelimit_service.py
backend/tests/: README.md  __init__.py  conftest.py
docs/competitive-analysis/: market-overview.md  roadmap.md
frontend/: commitlint.config.js  config.ts  instrumentation-client.ts  mdx-components.tsx  middleware.ts  next-sitemap.config.js  next.config.mjs  package-lock.json  package.json  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.json
frontend/app/: error.tsx  fonts.css  fonts.ts  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/components/: APIKeyActions.tsx  APIKeysManager.tsx  ButtonAccount.tsx  ButtonCheckout.tsx  ButtonDeleteAccount.tsx  ButtonLead.tsx  ButtonLogout.tsx  ButtonSignin.tsx  ButtonSupport.tsx  CTA.tsx  CreditsUsageChart.tsx  DashboardMobileNav.tsx  DashboardSidebar.tsx  FAQ.tsx  FeatureShowcase.tsx  FeatureShowcase2.tsx  FeaturesGridSimple.tsx  Footer.tsx  FreeTools.tsx  Header.tsx  Hero.tsx  Integrations.tsx  LayoutClient.tsx  Pricing.tsx  ProfileDropdown.tsx  RelatedGenerators.tsx  SubscriptionCard.tsx  TemplateShowcase.tsx  UseCases.tsx  (+2 more)
knowledge-center/: FREE_TOOLS_ROADMAP.md  INIT_PROJECT.md  SUPABASE.md
scripts/: bump_version.py  create_sdk_releases.py  generate-sitemap-dates.js  generate.py  generate_release_notes.py  generate_sdks.py  publish_n8n.py  publish_sdks.py
supabase/: config.toml
(+342 files in other folders)
