[project]
name = "pdftemplatefast-backend"
dynamic = ["version"]
description = "FastAPI backend for PDF generation from HTML templates"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "weasyprint>=61.2",
    "jinja2>=3.1.3",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "supabase>=2.3.0",
    "python-jose[cryptography]>=3.3.0",
    "beautifulsoup4>=4.12.0",
    "python-barcode[images]>=0.15.1",
    "qrcode>=7.4.0",
    "tinycss2>=1.2.0",
    "pdf2image>=1.16.0",
    "pillow>=10.0.0",
    "PyMuPDF>=1.23.0",
    "boto3>=1.34.0",
    "setuptools-scm>=9.2.2",
    "openai>=1.50.0",
    "google-cloud-tasks>=2.14.0",
    "google-auth>=2.27.0",
    "pymupdf4llm>=0.0.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.287",
    "mypy>=1.5.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# Git repo is in parent directory (monorepo structure)
root = ".."
# Version derived from git tags (e.g., v1.0.0 → "1.0.0")
# Falls back to "0.0.0" if no tags exist
fallback_version = "0.0.0"
# Only use tags starting with 'v' (e.g., v1.0.0, not random tags)
tag_regex = "^v(?P<version>\\d+\\.\\d+\\.\\d+)$"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
back = "app.cli:start_server"
